--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "day1_2",
   "version": "1.0.0",
   "description": "",
-  "main": "students.js",
+  "main": "main.js",
   "scripts": {
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development",
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
     "axios": "^0.24.0",
     "vue": "^2.6.14",
-    "vue-axios": "^3.4.0"
+    "vue-axios": "^3.4.0",
+    "webpack": "^5.63.0"
   }
 }
