--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.24.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
+    "vue-router": "^3.5.3",
     "webpack": "^5.63.0"
   }
 }
